--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,7 +3,7 @@
     "logo": "C02e PORTAL",
     "home": "Home",
     "service": "Service",
-    "trade": "Trade",
+    "DecarbXchange": "DecarbXchange",
     "pricing": "Pricing",
     "news": "News",
     "login": "Login"
